SAKIII-4362 Consolidate and apply savecontent styles to share pop over, fix spacing issue in share content widget

--- a/dev/css/sakai/sakai.base.css
+++ b/dev/css/sakai/sakai.base.css
@@ -537,6 +537,13 @@ ul li.s3d-list-item:hover{background-color:#f1f9fd;}
 .s3d-dropdownlisttwo-menu ul{background-color:#fff;border:1px solid #CCC;margin:0;padding:5px 15px 5px 7px;}
 .s3d-dropdownlisttwo-menu li{list-style-type:none;padding:0;}
 
+/*
+ * POPOVERS
+ */
+.s3d-popover-container {border: 1px solid #EAEBEC;border-top: none;border-radius: 5px;-moz-border-radius: 5px;-webkit-border-radius: 5px;box-shadow: 0px 0px 5px #454545;-moz-box-shadow: 0px 0px 5px #454545;-webkit-box-shadow: 0px 0px 5px #454545;background:url("/dev/images/popover_bg.png") repeat-x scroll left top #f4f4f4;font-size:13px;}
+.s3d-popover-container .s3d-popover-inner {padding:10px;word-wrap:break-word;}
+.s3d-popover-arrowup {background:url("/dev/images/popover_arrowup.png") no-repeat scroll left top transparent;height:13px;margin-left:110px;position:relative;width:33px;}
+
 /* 
  * TAGLISTS
  */
